package edu.fiuba.HorizonProject.modelo;

public interface ElementoMapa {
}
