package edu.fiuba.HorizonProject.modelo;

public class Jugador implements ElementoMapa{
}
