package edu.fiuba.HorizonProject.modelo;

public class Monster implements ElementoMapa, NPC {
}
