package edu.fiuba.HorizonProject.modelo;

public interface NPC extends ElementoMapa {

}
