package edu.fiuba.HorizonProject.modelo;

public class NPCGuide implements NPC {

}
