package edu.fiuba.HorizonProject.modelo;

public class TerrenoHabitable implements Terreno {
}
