package edu.fiuba.HorizonProject.modelo;

public class TerrenoNoHabitable implements Terreno {
}
